force-app/main/default/objects/Insurance_Provider__c/fields/Enrollment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Instructions__c</fullName>
    <label>Enrollment Instructions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>