force-app/main/default/objects/Insurance_Provider__c/fields/Enrollment_Link__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Link__c</fullName>
    <label>Enrollment Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>