force-app/main/default/objects/Insurance_Provider__c/fields/Enrollment_Required__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Required__c</fullName>
    <label>Enrollment Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>