force-app/main/default/objects/Insurance_Provider__c/fields/Insuarace_Account__c.field-meta.xml
<CustomField>
    <fullName>Insuarace_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Providers</relationshipLabel>
    <relationshipName>Insurance_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>