force-app/main/default/objects/Insurance_Provider__c/fields/Insurance_Group__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group__c</fullName>
    <label>Insurance Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>