force-app/main/default/objects/Insurance_Provider__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <label>Insurance Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>