force-app/main/default/objects/Insurance_Provider__c/fields/Pass_Thru_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pass_Thru_Fee__c</fullName>
    <label>Pass Thru Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>