force-app/main/default/objects/Insurance_Provider__c/fields/Payer_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Payer_Last_Updated_Date__c</fullName>
    <label>Payer Last Updated Date</label>
    <type>Date</type>
</CustomField>