force-app/main/default/objects/Insurance_Provider__c/fields/Rebate_Tier__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Tier__c</fullName>
    <label>Rebate Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>