force-app/main/default/objects/Insurance_Provider__c/fields/Tran_Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>Tran_Type_Desc__c</fullName>
    <label>Tran Type Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>